test/lit/pto/tinsert_invalid_prequant_form.pto
// RUN: not ptoas --pto-arch a5 %s 2>&1 | FileCheck %s

module attributes {"pto.device-spec" = "Ascend950"} {
  func.func @invalid_prequant_vec_source() {
    %c0 = arith.constant 0 : index
    %pre = arith.constant 7 : i64
    %src = pto.alloc_tile : !pto.tile_buf<loc=vec, dtype=f16, rows=32, cols=32, v_row=32, v_col=32, blayout=row_major, slayout=none_box, fractal=512, pad=0>
    %dst = pto.alloc_tile : !pto.tile_buf<loc=vec, dtype=f16, rows=32, cols=32, v_row=32, v_col=32, blayout=row_major, slayout=none_box, fractal=512, pad=0>

    pto.tinsert ins(%src, %c0, %c0 : !pto.tile_buf<loc=vec, dtype=f16, rows=32, cols=32, v_row=32, v_col=32, blayout=row_major, slayout=none_box, fractal=512, pad=0>, index, index pre_quant %pre : i64)
                outs(%dst : !pto.tile_buf<loc=vec, dtype=f16, rows=32, cols=32, v_row=32, v_col=32, blayout=row_major, slayout=none_box, fractal=512, pad=0>)
    return
  }
}

// CHECK: error: 'pto.tinsert' op expects preQuantScalar form to use loc=acc src
